@@ -1870,6 +1870,130 @@ int32_t SPVM__Net__SSLeay__SSL_CTX__sess_set_new_cb(SPVM_ENV* env, SPVM_VALUE* s
   return 0;
 }
 
+static void sess_set_remove_cb(SSL_CTX *ssl_ctx, SSL_SESSION* session) {
+  
+  int32_t error_id = 0;
+  
+  SPVM_ENV* env = thread_env;
+  
+  SPVM_VALUE* stack = env->new_stack(env);
+  
+  int32_t ret = 0;
+  if (!ssl_ctx) {
+    env->die(env, stack, "SSL_get_SSL_CTX(ssl) failed.", __func__, FILE_NAME, __LINE__);
+    
+    void* obj_exception = env->get_exception(env, stack);
+    const char* exception = env->get_chars(env, stack, obj_exception);
+    
+    fprintf(env->api->runtime->get_spvm_stderr(env->runtime), "[An exception thrown in native sess_set_remove_cb function is converted to a warning]\n");
+    
+    env->print_stderr(env, stack, obj_exception);
+    
+    fprintf(env->api->runtime->get_spvm_stderr(env->runtime), "\n");
+  }
+  else {
+    char* tmp_buffer = env->get_stack_tmp_buffer(env, stack);
+    snprintf(tmp_buffer, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE, "%p", ssl_ctx);
+    stack[0].oval = env->new_string(env, stack, tmp_buffer, strlen(tmp_buffer));
+    env->call_instance_method_by_name(env, stack, "GET_REMOVE_SESSION_CB", 1, &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) {
+      void* obj_exception = env->get_exception(env, stack);
+      const char* exception = env->get_chars(env, stack, obj_exception);
+      
+      fprintf(env->api->runtime->get_spvm_stderr(env->runtime), "[An exception thrown in native sess_set_remove_cb function is converted to a warning]\n");
+      
+      env->print_stderr(env, stack, obj_exception);
+      
+      fprintf(env->api->runtime->get_spvm_stderr(env->runtime), "\n");
+    }
+    else {
+      // Return value of get_psk_server_cb method
+      void* obj_cb = stack[0].oval;
+      
+      if (!obj_cb) {
+        env->die(env, stack, "GET_REMOVE_SESSION_CB method returns undef.", __func__, FILE_NAME, __LINE__);
+        
+        void* obj_exception = env->get_exception(env, stack);
+        const char* exception = env->get_chars(env, stack, obj_exception);
+        
+        fprintf(env->api->runtime->get_spvm_stderr(env->runtime), "[An exception thrown in native sess_set_remove_cb function is converted to a warning]\n");
+        
+        env->print_stderr(env, stack, obj_exception);
+        
+        fprintf(env->api->runtime->get_spvm_stderr(env->runtime), "\n");
+      }
+      else {
+        void* obj_address_ssl_ctx = env->new_pointer_object_by_name(env, stack, "Address", ssl_ctx, &error_id, __func__, FILE_NAME, __LINE__);
+        if (error_id) { return; }
+        stack[0].oval = obj_address_ssl_ctx;
+        env->call_class_method_by_name(env, stack, "Net::SSLeay::SSL_CTX", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);
+        if (error_id) { return; }
+        void* obj_ssl_ctx = stack[0].oval;
+        env->set_no_free(env, stack, obj_ssl_ctx, 1);
+        
+        void* obj_address_session = env->new_pointer_object_by_name(env, stack, "Address", session, &error_id, __func__, FILE_NAME, __LINE__);
+        if (error_id) { return; }
+        stack[0].oval = obj_address_session;
+        env->call_class_method_by_name(env, stack, "Net::SSLeay::SSL_SESSION", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);
+        if (error_id) { return; }
+        void* obj_session = stack[0].oval;
+        env->set_no_free(env, stack, obj_session, 1);
+        
+        stack[0].oval = obj_cb;
+        stack[1].oval = obj_ssl_ctx;
+        stack[2].oval = obj_session;
+        
+        env->call_instance_method_by_name(env, stack, "", 3, &error_id, __func__, FILE_NAME, __LINE__);
+        if (error_id) {
+          void* obj_exception = env->get_exception(env, stack);
+          const char* exception = env->get_chars(env, stack, obj_exception);
+          
+          fprintf(env->api->runtime->get_spvm_stderr(env->runtime), "[An exception thrown in native sess_set_remove_cb function is converted to a warning]\n");
+          
+          env->print_stderr(env, stack, obj_exception);
+          
+          fprintf(env->api->runtime->get_spvm_stderr(env->runtime), "\n");
+        }
+        
+        int32_t ret = stack[0].ival;
+      }
+    }
+  }
+  
+  env->free_stack(env, stack);
+  
+  return;
+}
+
+int32_t SPVM__Net__SSLeay__SSL_CTX__sess_set_remove_cb(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  void* obj_cb = stack[1].oval;
+  
+  SSL_CTX* ssl_ctx = env->get_pointer(env, stack, obj_self);
+  
+  void (*native_cb)(SSL_CTX *ssl_ctx, SSL_SESSION* session) = NULL;
+  
+  if (obj_cb) {
+    native_cb = &sess_set_remove_cb;
+  }
+  
+  stack[0].oval = obj_self;
+  char* tmp_buffer = env->get_stack_tmp_buffer(env, stack);
+  snprintf(tmp_buffer, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE, "%p", ssl_ctx);
+  stack[1].oval = env->new_string(env, stack, tmp_buffer, strlen(tmp_buffer));
+  stack[2].oval = obj_cb;
+  env->call_instance_method_by_name(env, stack, "SET_REMOVE_SESSION_CB", 3, &error_id, __func__, FILE_NAME, __LINE__);
+  if (error_id) { return error_id; }
+  
+  SSL_CTX_sess_set_remove_cb(ssl_ctx, native_cb);
+  
+  return 0;
+}
+
 int32_t SPVM__Net__SSLeay__SSL_CTX__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
@@ -1902,6 +2026,12 @@ int32_t SPVM__Net__SSLeay__SSL_CTX__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
   snprintf(tmp_buffer, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE, "%p", pointer);
   stack[1].oval = env->new_string(env, stack, tmp_buffer, strlen(tmp_buffer));
   env->call_instance_method_by_name(env, stack, "DELETE_NEW_SESSION_CB", 2, &error_id, __func__, FILE_NAME, __LINE__);
+  if (error_id) { return error_id; }
+  
+  stack[0].oval = obj_self;
+  snprintf(tmp_buffer, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE, "%p", pointer);
+  stack[1].oval = env->new_string(env, stack, tmp_buffer, strlen(tmp_buffer));
+  env->call_instance_method_by_name(env, stack, "DELETE_REMOVE_SESSION_CB", 2, &error_id, __func__, FILE_NAME, __LINE__);
   if (error_id) { return error_id; }
   
   if (!env->no_free(env, stack, obj_self)) {
